--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
+#server.contextPath= /api
 spring.datasource.url= jdbc:mysql://localhost:3306/urbana?createDatabaseIfNotExist=true&serverTimeZone=UTC
 spring.datasource.username= root
 spring.datasource.password= admin
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto= update
+security.user.password=password
